feat: expanded breakables and added serializable and thread safety tests